src/tests/valid/ivdserial/inheritanceOverriding.ivdserial
=================================Element========================================
Path: anonymous-1-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
------------Attr Key: text
Literal: "Correct."
